# llm-observability-evaluation-suite

./: .env.example  ARCHITECTURE.md  DEPLOYMENT.md  Dockerfile  OPERATIONS.md  README.md  docker-compose.yml  pyproject.toml  sample_eval.json
docs/: adr-001-evaluation-service-layer.md
frontend/: index.html
frontend/src/: main.jsx  styles.css
src/llm_observability/: __init__.py  alerts.py  api.py  cli.py  config.py  evaluator.py  metrics.py  schemas.py  service.py  tracing.py
tests/: test_api.py  test_evaluator.py  test_metrics.py  test_service.py
